--- a/CookingCurator/Views/User/Index.cshtml
+++ b/CookingCurator/Views/User/Index.cshtml
@@ -20,10 +20,14 @@
         <th>
             @Html.DisplayNameFor(model => model.userEmail)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.banUser)
+        </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.user_ID)
@@ -35,7 +39,11 @@
             @Html.DisplayFor(modelItem => item.userEmail)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.banUser)
+        </td>
+        <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Ban User", "BanUser", new { id = item.user_ID }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
