--- a/CookingCurator/Views/Recipe/Edit.cshtml
+++ b/CookingCurator/Views/Recipe/Edit.cshtml
@@ -1,11 +1,10 @@
 ﻿@model CookingCurator.EntityModels.RecipeBaseViewModel
 
 @{
-    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>@Html.DisplayFor(model => model.title)</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RecipeBaseViewModel</h4>
+        <h4>Edit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -35,7 +34,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.instructions, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.instructions, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.instructions, new { htmlAttributes = new { @class = "form-control col-md-10" } })
+                
                 @Html.ValidationMessageFor(model => model.instructions, "", new { @class = "text-danger" })
             </div>
         </div>
