updated software used

--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -26,6 +26,10 @@
         <td>MySql Connector</td>
         <td>https://dev.mysql.com/downloads/connector/net/</td>
     </tr>
+    <tr>
+        <td>Bootstrap</td>
+        <td>https://getbootstrap.com/</td>
+    </tr>
 </table>
 
 <h3>Recipes Source</h3>
