--- a/CookingCurator/Views/Recipe/CreateVerified.cshtml
+++ b/CookingCurator/Views/Recipe/CreateVerified.cshtml
@@ -1,18 +1,18 @@
-﻿@model CookingCurator.EntityModels.RecipeAddViewForm
+﻿@model CookingCurator.EntityModels.RecipeVerifiedAddViewModel
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Create Verified Recipe";
 }
 
-<h2>Create</h2>
+<h2>Create Verified Recipe</h2>
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
-    <h4>RecipeAddViewForm</h4>
+    <h4>RecipeVerifiedAddViewModel</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -85,3 +85,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
