--- a/CookingCurator/Views/User/Index.cshtml
+++ b/CookingCurator/Views/User/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>User Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    Register New User
+    <!--@Html.ActionLink("Create New", "Create") -->
 </p>
 <table class="table">
     <tr>
@@ -42,10 +43,10 @@
             @Html.DisplayFor(modelItem => item.banUser)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            <!-- @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) | -->
             @Html.ActionLink("Ban User", "BanUser", new { id = item.user_ID }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Details", "Details", new { id = item.user_ID }) 
+            <!--| @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) -->
         </td>
     </tr>
 }
