--- a/CookingCurator/Views/Profile/UserDashboard.cshtml
+++ b/CookingCurator/Views/Profile/UserDashboard.cshtml
@@ -7,36 +7,52 @@
 <!-- <h4>Logged in as @ViewBag.Username</h4> -->
 <hr />
 
-<div style="font-size:xx-large" class="dropdown">
-    <button type="button" data-toggle="dropdown" style="padding:10px 10px 10px 10px;background-color:lightsteelblue;border:groove;border-width:10px">
-        Settings >
-    </button>
-    <ul class="dropdown-menu" style="font-size:x-large">
-        <li style="border:solid; padding:5px; background-color:pink">Change Username</li>
-        <li style="border:solid; padding:5px; background-color:pink">Change Password</li>
-        <li style="border:solid; padding:5px; background-color:pink">Set Allergies</li>
-        <li style="border:solid; padding:5px; background-color:pink">Set Diets</li>
-        <li style="border:solid; padding:5px; background-color:pink">Set Sorting Preference</li>
-    </ul>
+<div style="font-size:xx-large; background-color:lavender" class="col-lg-6 text-center">
+    <p style="padding:10px 10px 10px 10px;background-color:lightsteelblue;border:groove;border-width:10px">
+        Your Settings
+    </p>
+        <div class="col-lg-12 text-center" style="font-size:x-large">
+            <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Change Username</p>
+            <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Change Password</p>
+            <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Allergies</p>
+            <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Diets</p>
+            <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Sorting Preference</p>
+        </div>
 </div>
-<hr />
-<div style="font-size:xx-large" class="dropdown">
-    <button type="button" data-toggle="dropdown" style="padding:10px 10px 10px 10px;background-color:lightsteelblue;border:groove;border-width:10px">
-        Recipes >
-    </button>
-    <ul style="font-size:x-large" class="dropdown-menu">
-        <li style="border:solid; padding:5px; background-color:pink">View Recipes</a></li>
-        <li style="border:solid; padding:5px; background-color:pink">Create New Recipe</li>
-        <li style="border:solid; padding:5px; background-color:pink">View Bookmarks</li>
-        <li style="border:solid; padding:5px; background-color:pink">Search For Recipes</li>
-    </ul>
+
+
+
+<div style="font-size:xx-large; background-color:lavender"" class="col-lg-6 text-center">
+    <p style="padding:10px 10px 10px 10px;background-color:lightsteelblue;border:groove;border-width:10px">
+        Recipes
+    </p>
+    <div class="col-lg-12 text-center" style="font-size:x-large; padding-bottom:84px">
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("View All Recipes", "Index", "Recipe")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Create New Recipe", "Create", "Recipe")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">View Bookmarks</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Search For Recipes</p>
+    </div>
 </div>
-<hr />
 
-Have a concern?
-@Html.ActionLink("Contact Us", "Contact", "Home")
-<!-- <hr />
+<br/>
+<br/>
 
-Last Login: @ViewBag.Date
 
--->
+
+
+<div class="col-lg-12">
+    <hr />
+    <h3>
+        Have a concern?
+        @Html.ActionLink("Contact Us", "Contact", "Home")
+    </h3>
+    <hr />
+</div>
+
+<hr/>
+
+    <!-- <hr />
+
+    Last Login: @ViewBag.Date
+
+    -->
