--- a/CookingCurator/Views/User/Search.cshtml
+++ b/CookingCurator/Views/User/Search.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserFindViewModel</h4>
+        <h4>Find a user of Cooking Curator</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
