Authors page and Home page updated

--- a/CookingCurator/Views/Home/About.cshtml
+++ b/CookingCurator/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About this application";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title:</h2>
 
-<p>Use this area to provide additional information.</p>
+<p>Cooking Curator is an application where users can find recipes suited to their available ingredients,
+    dietary needs, and allergy restrictions.  Currently the viewing, adding, editing, and deleting of recipes
+    is available.  Verified recipes are ones gathered and inspected by the administrators of this application.
+    It is possible to see all recipes from a single author or user.</p>
