--- a/CookingCurator/Views/Recipe/Authors.cshtml
+++ b/CookingCurator/Views/Recipe/Authors.cshtml
@@ -23,13 +23,14 @@ else
 
     <h2>@ViewBag.Title</h2>
 
-    if (@ViewBag.Title == "Dairy Farmers of Canada's Recipes:")
-    {
-        <br/>
-        <h5>More informatio about the Dairy Farmers of Canada can be found at: <u>https://dairyfarmersofcanada.ca/en/dairy-in-canada</u> </h5>
-        <h5>More recipes from them can be found at <u>https://www.dairygoodness.ca/</u> </h5>
-        <br/>
-    }
+    <!--   if (@ViewBag.Title == "Dairy Farmers of Canada's Recipes:")
+        {
+            <br/>
+            <h5>More informatio about the Dairy Farmers of Canada can be found at: <u>https://dairyfarmersofcanada.ca/en/dairy-in-canada</u> </h5>
+            <h5>More recipes from them can be found at <u>https://www.dairygoodness.ca/</u> </h5>
+            <br/>
+        }
+    -->
 
     <table class="table">
         <tr>
